add documentation and bat file for quickstart